Fixed first post from being covered up

--- a/app/stylesheets/shared/_wire.css.sass
+++ b/app/stylesheets/shared/_wire.css.sass
@@ -27,7 +27,7 @@
 .wire-item
   position: relative
   border-top: 1px solid #bebebe
-  padding: 12px 10px 15px 10px
+  padding: 65px 10px 15px 10px
   .title, .author, .body, .message-user 
     margin-left: 62px
   .body
@@ -161,7 +161,7 @@
     display: block
     margin-top: 10px
     padding: 5px 
-
+  
 
   button.subscribe, button.unsubscribe
     +blue-button
@@ -191,3 +191,6 @@
       padding-bottom: 5px
     td
       color: $textColor
+      
+group-post:first
+  margin-top: 60px
